--- a/index.html
+++ b/index.html
@@ -91,18 +91,13 @@
                     <div class="text-secondary experience_block">
                             <ul>
                                 <li>
-                                    Development of various open-source SDKs for the <a target="_blank" href="https://github.com/nordic-institute/X-Road">X-Road system</a> on Java and .NET Core platforms
+                                    Development e-ticket system "Mobius"
                                     <ul>
-                                        <li>libraries for reading and parsing the global X-Road configuration.</li>
-                                        <li>libraries for developing SOAP services for X-Road on the Spring Boot platform.</li>
-                                        <li>utilities for collecting and analyzing request data on .NET Core platform and Postgres.</li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    Development of software modules for user authentication using devices that support PKCS #11
-                                </li>
-                                <li>
-                                    Development of a system that implements the SSO principle, using the OIDC protocol (based on IdentityServer4)
+                                        <li>Worked in a agile based team in e-ticketing system for railways
+                                            using following technologies: ASP.NET , WEB API, WCF, WPF, ORM(Entity Framework), T-SQL
+                                            as a strong junior developer. </li>
+                                        <li> The responsibilities are: analyzing system logic, adding new features, fixing bugs</li>
+                                        <li>Writing SQL scripts for primary filling independent data(SQL)</li>                                    </ul>
                                 </li>
                             </ul>
                     </div>
@@ -118,10 +113,10 @@
                     <div class="text-secondary experience_block">
                             <ul>
                                 <li>
-                                    Development of a system for tracking task changes in the JIRA system
+                                    Development for the microfinance and financial services industry
                                     <ul>
-                                        <li>Development of modules for interacting with the JIRA API</li>
-                                        <li>Designing a database structure for storing domain models data</li>
+                                        <li>Creating new modules using WinForms and MSSQL</li>
+                                        <li>Participated in testing and debugging</li>
                                     </ul>
                                 </li>
                             </ul>
@@ -138,7 +133,7 @@
                     <div class="text-secondary experience_block">
                             <ul>
                                 <li>
-                                    Development of a system for tracking task changes in the JIRA system
+                                    Development “The Unified Base” banking software
                                     <ul>
                                         <li>Participated in developing software application for the banking industry. 
                                             In general, various high load systems working with financial transactions. 
