--- a/index.html
+++ b/index.html
@@ -70,11 +70,17 @@
                     <h4>Summary</h4>
                     <p>
                         Software Developer with 2+ years of commercial experience in Microsoft stack (.NET, ASP.NET, ASP.NET Web API, C#, ADO.NET, Entity Framework, MSSQL).
+                    </p>
+                    <p>
                         Strong skills in developing web applications, including database design, back-end functionality.
                         Have a good knowledge of such technologies as ASP.NET, Web API, WPF, Entity Framework, Dapper, MS SQL Server
+                    </p>
+                        
+                    <p>
                         Responsible, quick-learning, hardworking person and team player. 
                         Would like to participate at recent projects, working with latest technologies, applying best-practiced/suited architectures.
                     </p>
+
                 </div>
                 <div class="mb-3">
                     <h4>Experience</h4>
@@ -178,13 +184,11 @@
                 <div class="mb-3">
                     <h4>Skills</h4>
                     <ul>
-                        <li>.NET/C#, JavaScript</li>
-                        <li> Microsoft SQL Server, MySQL, SQLite3</li>
-                        <li>WCF(SOAP), Web API (REST), OAuth2.0/OIDC</li>
-                        <li>ASP.NET, AutoMapper, FluentValidation, EntityFrameworkCore</li>
-                        <li>MongoDB</li>
-                        <li>HTML5, XML (XSD), CSS3</li>
-                        <li>Design Patterns, SOLID, Data Structures,Git</li>
+                        <li> .NET/C#, ASP.NET, AutoMapper, FluentValidation, EntityFramework </li>
+                        <li> Microsoft SQL Server, MySQL, SQLite, MongoDB </li>
+                        <li> WCF(SOAP), Web API (REST) </li>
+                        <li> HTML5, XML (XSD), CSS3 </li>
+                        <li> Design Patterns, SOLID, Data Structures,Git </li>
                     </ul>
                 </div>
             </div>
