--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
                 <div class="mb-3">
                     <h4>Skills</h4>
                     <ul>
-                        <li> .NET/C#, ASP.NET, AutoMapper, FluentValidation, EntityFramework </li>
+                        <li> .NET/C#, EntityFramework, LINQ, ASP.NET, FluentValidation </li>
                         <li> Microsoft SQL Server, MySQL, SQLite, MongoDB </li>
-                        <li> WCF(SOAP), Web API (REST) </li>
-                        <li> HTML5, XML (XSD), CSS3 </li>
+                        <li> WinForms, WCF(SOAP), Web API (REST) </li>
+                        <li> HTML/CSS, XML (XSD), JavaScript/Typescript </li>
                         <li> Design Patterns, SOLID, Data Structures,Git </li>
                     </ul>
                 </div>
