-added language section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="mb-3">
                     <h4>Summary</h4>
                     <p>
-                        Software Developer with 2+ years of commercial experience in Microsoft stack (.NET, ASP.NET, ASP.NET Web API, C#, ADO.NET, Entity Framework, MSSQL).
+                        Software Developer with 2 years of commercial experience in Microsoft stack (.NET, ASP.NET, ASP.NET Web API, C#, ADO.NET, Entity Framework, MSSQL).
                     </p>
                     <p>
                         Strong skills in developing web applications, including database design, back-end functionality.
@@ -189,6 +189,13 @@
                         <li> WinForms, WCF(SOAP), Web API (REST) </li>
                         <li> HTML/CSS, XML (XSD), JavaScript/Typescript </li>
                         <li> Design Patterns, SOLID, Data Structures,Git </li>
+                    </ul>
+                </div>
+                <div class="mb-3">
+                    <h4>Language Knowledge</h4>
+                    <ul>
+                        <li>Russian - Fluently</li>
+                        <li>English - Upper-intermediate</li>
                     </ul>
                 </div>
             </div>
