--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                             using following technologies: ASP.NET , WEB API, WCF, WPF, ORM(Entity Framework), T-SQL
                                             as a strong junior developer. </li>
                                         <li> The responsibilities are: analyzing system logic, adding new features, fixing bugs</li>
-                                        <li>Writing SQL scripts for primary filling independent data(SQL)</li>                                    </ul>
+                                        <li> Writing SQL scripts (stored procedure,function)</li>                                    </ul>
                                 </li>
                             </ul>
                     </div>
@@ -185,10 +185,10 @@
                     <h4>Skills</h4>
                     <ul>
                         <li> .NET/C#, EntityFramework, LINQ, ASP.NET, FluentValidation </li>
-                        <li> Microsoft SQL Server, MySQL, SQLite, MongoDB </li>
+                        <li> Microsoft SQL Server, PostgreSQL, SQLite, MongoDB </li>
                         <li> WinForms, WCF(SOAP), Web API (REST) </li>
                         <li> HTML/CSS, XML (XSD), JavaScript/Typescript </li>
-                        <li> Design Patterns, SOLID, Data Structures,Git </li>
+                        <li> Design Patterns, SOLID, Data Structures, Git </li>
                     </ul>
                 </div>
                 <div class="mb-3">
